--- a/strings/pt.lproj/libcore.strings
+++ b/strings/pt.lproj/libcore.strings
@@ -1,4 +1,4 @@
-﻿/*
+/*
  Localizable.strings
  EAQ
  
@@ -348,39 +348,39 @@
 //
 // Strings added for the new app!
 //
-"Results" = "Results"; // TODO - translate!
-"Run" = "Run"; // TODO - translate!
-"Settings" = "Settings"; // TODO - translate!
-"Summary" = "Summary"; // TODO - translate!
-"Target" = "Target"; // TODO - translate!
-"Device: " = "Device: "; // TODO - translate!
-"Start" = "Start"; // TODO - translate!
-"Ready to run" = "Ready to run"; // TODO - translate!
-"Press the Start button" = "Press the Start button"; // TODO - translate!
-"No connection" = "No connection"; // TODO - translate!
-"Latency / Loss testing" = "Latency / Loss testing"; // TODO - translate!
-"Error" = "Error"; // TODO - translate!
-"Tests executed" = "Tests executed"; // TODO - translate!
-"Tests canceled" = "Tests canceled"; // TODO - translate!
-"Press the Start button to run again" = "Press the Start button to run again"; // TODO - translate!
-"Target Selection" = "Target Selection"; // TODO - translate!
-"Latency / Loss / Jitter" = "Latency / Loss / Jitter"; // TODO - translate!
-"Download speed for " = "Download speed for "; // TODO - translate!
-"Upload speed for " = "Upload speed for "; // TODO - translate!
-"Latency for " = "Latency for "; // TODO - translate!
-"Loss for " = "Loss for "; // TODO - translate!
-"Jitter for " = "Jitter for "; // TODO - translate!
+"Results" = "Resultados"; // TODO - translate!
+"Run" = "Executar"; // TODO - translate!
+"Settings" = "Ajustes"; // TODO - translate!
+"Summary" = "Resumo"; // TODO - translate!
+"Target" = "Servidor"; // TODO - translate!
+"Device: " = "Dispositivo: "; // TODO - translate!
+"Start" = "Iniciar"; // TODO - translate!
+"Ready to run" = "Pronto para iniciar"; // TODO - translate!
+"Press the Start button" = "Precione o botão iniciar"; // TODO - translate!
+"No connection" = "Sem conexão"; // TODO - translate!
+"Latency / Loss testing" = "Testando Latência / Perda de pacotes"; // TODO - translate!
+"Error" = "Erro"; // TODO - translate!
+"Tests executed" = "Testes executados"; // TODO - translate!
+"Tests canceled" = "Testes cancelados"; // TODO - translate!
+"Press the Start button to run again" = "Precione o botão iniciar para executar novamente"; // TODO - translate!
+"Target Selection" = "Escolha do servidor"; // TODO - translate!
+"Latency / Loss / Jitter" = "Latência / Perda de pacotes / Jitter"; // TODO - translate!
+"Download speed for " = "Velocidade de download para "; // TODO - translate!
+"Upload speed for " = "Velocidade de upload para "; // TODO - translate!
+"Latency for " = "Latência para "; // TODO - translate!
+"Loss for " = "Perda de pacotes para "; // TODO - translate!
+"Jitter for " = "Jitter para "; // TODO - translate!
 "Initial_Warning_Text" = "";
-"Public_IP" = "Your IP"; // TODO - translate!
-"Submission_ID" = "Reference No."; // TODO - translate!
+"Public_IP" = "Seu IP"; // TODO - translate!
+"Submission_ID" = "Número de referência"; // TODO - translate!
 "All" = "Todos";
 "Best" =  "Melhores";
-"Activation Error" = "Activation Error"; // TODO - translate
-"Please check your internet connection, and then try again." = "Please check your internet connection, and then try again."; // TODO - translate
-"Email not enabled" = "Email not enabled"; // TODO - translate
-"In order to send emails, you must first configure email on your device." = "In order to send emails, you must first configure email on your device."; // TODO - translate
+"Activation Error" = "Erro na ativação"; // TODO - translate
+"Please check your internet connection, and then try again." = "Favor verificar sua conexão de internet e tentar novamente."; // TODO - translate
+"Email not enabled" = "Email não permitido"; // TODO - translate
+"In order to send emails, you must first configure email on your device." = "Para enviar emails deve-se configurar uma conta de email no dispositivo."; // TODO - translate
 
 // Localized strings - 25/11/2014
 // Column headings, shown at top of summary view in the new app.
-"Average" = "Average";
-"Best" = "Best";
+"Average" = "Média";
+"Best" = "Melhor";
