New app - history tab - display text in screen if no results available to show Fixed code typo related to Mbps values (from Mpbs to Mbps) New app - T&C - handle embedded links through Safari

--- a/strings/en.lproj/libcore.strings
+++ b/strings/en.lproj/libcore.strings
@@ -384,3 +384,5 @@
 // Shown in the run screen.
 "Download testing" = "Download testing";
 "Upload testing" = "Upload testing";
+
+"no_archived_results_yet" = "There are no results yet";
