Various updates: - new app: display a resource string (rather than blank string) when waiting for an upload/download test value to be generated - allow only 1 closest target to be required (previous requirement was at least 2) - fixed problem in the results panel, where the date did not always display properly

--- a/strings/en.lproj/libcore.strings
+++ b/strings/en.lproj/libcore.strings
@@ -386,3 +386,5 @@
 "Upload testing" = "Upload testing";
 
 "no_archived_results_yet" = "There are no results yet";
+
+"result_working" = "Working";
