SK Speed Test app - display new section: Phone Info, Network Info. Updated the method used to map iOS platform string to a description name (e.g. "iPhone7,1" -> "iPhone 6 Plus")

--- a/strings/fr.lproj/libcore.strings
+++ b/strings/fr.lproj/libcore.strings
@@ -235,6 +235,8 @@
 "latitude" = "Latitude";
 "longitude" = "Longitude";
 "date" = "Date";
+"phone_info" = "Phone Info";
+"network_info" = "Network Info";
 
 // Radio technology types...
 "CTRadioAccessTechnologyUnknown" = "Unknown";
