--- a/strings/pt.lproj/libcore.strings
+++ b/strings/pt.lproj/libcore.strings
@@ -321,6 +321,9 @@
 "latitude" = "Latitude";
 "longitude" = "Longitude";
 "date" = "Data";
+"phone_info" = "Phone Info";
+"network_info" = "Network Info";
+
 
 // Radio technology types...
 "CTRadioAccessTechnologyUnknown" = "Desconhecido";
