--- a/strings/en.lproj/libcore.strings
+++ b/strings/en.lproj/libcore.strings
@@ -21,6 +21,7 @@
 "Carrier_Network"   = "Carrier network code";
 "Carrier_ISO"       = "Carrier ISO country code";
 "Network_Type"      = "Network Type";
+"Network_Operator"  = "Network Operator";
 "Radio_Technology"  = "Radio Technology";
 
 "Label_Active"          = "Active metrics";
@@ -321,6 +322,9 @@
 "latitude" = "Latitude";
 "longitude" = "Longitude";
 "date" = "Date";
+"phone_info" = "Phone Info";
+"network_info" = "Network Info";
+
 
 // Radio technology types...
 "CTRadioAccessTechnologyUnknown" = "Unknown";
