--- a/strings/zh-Hans.lproj/libcore.strings
+++ b/strings/zh-Hans.lproj/libcore.strings
@@ -321,6 +321,9 @@
 "latitude" = "纬度";
 "longitude" = "经度";
 "date" = "日期";
+"phone_info" = "Phone Info";
+"network_info" = "Network Info";
+
 
 // Radio technology types...
 "CTRadioAccessTechnologyUnknown" = "未知";
