--- a/strings/pt.lproj/libcore.strings
+++ b/strings/pt.lproj/libcore.strings
@@ -391,3 +391,13 @@
 "no_archived_results_yet" = "Sem resultados até o momento";
 
 "result_working" = "Aguarde";
+
+
+// - the municipal area (typically a City, I think) in which the test was performed e.g. London
+"Municipality" = "Município";
+// - the name of the country in which the test has been run e.g. Brazil
+"Country" = "País";
+// - the name of the carrier behind the network connection (e.g. Vodafone, Virgin etc.)
+"WLAN Carrier" = "Operadora da Internet WiFi";
+// - the local network name (e.g. SK2)
+"SSID" = "Nome da rede WiFi";
