--- a/strings/en.lproj/libcore.strings
+++ b/strings/en.lproj/libcore.strings
@@ -297,7 +297,7 @@
 "Storyboard_About_Text_Upload"     = "This should be indicative of the maximum speed your broadband connection will be able to transmit data to the Internet.  Results are recorded in Mbps (higher is better).";
 "Storyboard_About_Text_Latency"    = "This test measures how long it takes one packet to be sent to one of our test servers, and then returned back to you.  Latency can be thought of as the responsiveness of the connection from your device and our servers on the Internet. Times are recorded here in milliseconds (lower is better).";
 "Storyboard_About_Text_PacketLoss" = "Packet loss occurs when the information sent by your device fails to reach its destination. When packet loss is high, you may find that time sensitive applications such as Voice over IP (VoIP) and online gaming will suffer. Packet loss is recorded here as a percentage (lower is better).";
-"Storyboard_About_Text_Jitter"     = "This test measures how long it takes one packet to be sent to one of our test servers, and then returned back to you.  Latency can be thought of as the responsiveness of the connection from your device and our servers on the Internet. Times are recorded here in milliseconds (lower is better).";
+"Storyboard_About_Text_Jitter"     = "This test measures the variation in time that it takes one packet to be sent to our test server and then returned back to you. In other words, jitter represents the variation of latency. Jitter is usually an indication of network congestion. High levels of jitter would impact the performance of time sensitive applications such as VoIP, online gaming and video streaming. Jitter is recorded in milliseconds (lower is better).";
 
 
 // Archived Results screen
